# qvitto

./: main.py  pyproject.toml  schema.py
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: feature.md  feature.yaml  feature.yml  labeler.yaml
.github/workflows/: auto-merge.yml  ci.yml  labeler.yaml
